Closed
Bug 635980
Opened 15 years ago
Closed 15 years ago
Frequent harmless ASSERTION Nv3DVStreaming Nv3DVControl failed!
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: benjamin, Assigned: benjamin)
References
Details
Attachments
(1 file)
|
855 bytes,
patch
|
jrmuizel
:
review+
jrmuizel
:
approval2.0+
|
Details | Diff | Splinter Review |
I keep getting an assertion whenever I open a new window or tab or something: Nv3DVStreaming Nv3DVControl failed!
Somebody in #gfx told me that this was harmless, so I'm providing a patch to turn it into a warning. Or I can remove the debug spew entirely, if that would be better.
Attachment #514288 -
Flags: review?(jmuizelaar)
Comment 1•15 years ago
|
||
Comment on attachment 514288 [details] [diff] [review]
Change assert to a warning, rev. 1
This is fine. Bas, what causes Nv3DVSetDevice to fail and should we be handling it?
Attachment #514288 -
Flags: review?(jmuizelaar) → review+
| Assignee | ||
Comment 2•15 years ago
|
||
Comment on attachment 514288 [details] [diff] [review]
Change assert to a warning, rev. 1
This is basically no-risk assertion removal, and the reward is a happy bsmedberg for the life of the branch!
Attachment #514288 -
Flags: approval2.0?
Comment 3•15 years ago
|
||
Comment on attachment 514288 [details] [diff] [review]
Change assert to a warning, rev. 1
Joe agrees that this is fine.
Attachment #514288 -
Flags: approval2.0? → approval2.0+
Comment 5•15 years ago
|
||
I get this a lot too now that I've upgraded to thet latest NV drivers. Please to be landing?
Comment 6•15 years ago
|
||
Landed on trunk
http://hg.mozilla.org/mozilla-central/rev/459f9ea753a2
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Assignee: nobody → benjamin
You need to log in
before you can comment on or make changes to this bug.
Description
•