Bug 635980. Change Nv3DVStreaming assert to warning. r=jmuizelaar, a=jmuizelaar